# simple-ad

./: LICENSE  README.md  simple-ad.cabal
src/: SimpleAD.hs
