name:                simple-ad
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/devonhollowood/simple-ad#readme
license:             BSD3
license-file:        LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2016 Devon Hollowood
category:            Educational
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleAD
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/devonhollowood/simple-ad
